# tw-analytics

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  info.md  migrate_db.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: MVP_COMPLETION.md  PROJECT.md  architecture.md  data_processing_principles.md  features_plan.md  idea.md  mvp_plan.md  requirements.md  rules.md  service_outputs.md
scripts/: load_data.bat  run_dev.bat  run_dev.sh  setup.bat
src/: __init__.py  main.py
src/api/: __init__.py  main.py
src/db/: __init__.py  config.py  models.py  session.py  setup.py
src/ingestion/: __init__.py  moloco_loader.py  tw_clicks_loader.py  tw_loader.py
src/services/: __init__.py  merge_service.py
